--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 
 buildscript {
-  ext.kotlin_version = '1.0.5-3'
+  ext.kotlin_version = '1.1.2-2'
   repositories {
     jcenter()
   }
@@ -58,7 +58,7 @@ dependencies {
 
   compile 'com.android.support:appcompat-v7:25.1.0'
   testCompile 'junit:junit:4.12'
-  compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
   compile 'com.jakewharton.timber:timber:4.4.0'
 }
 
