--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,8 @@ dependencies {
   compile retrofitDependencies.rxjavaAdapter
   compile retrofitDependencies.logging
 
-  compile 'io.reactivex:rxandroid:1.2.1'
-  compile 'io.reactivex:rxjava:1.1.6'
-  compile 'io.reactivex:rxkotlin:0.60.0'
+  compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  compile 'io.reactivex.rxjava2:rxjava:2.0.9'
 
   compile 'com.google.dagger:dagger:2.7'
   kapt 'com.google.dagger:dagger-compiler:2.7'
